    blocking operations. ``RB_ID=828289``

  * util-core: Reduced allocations by 40% and latency by 18% of satisfying `Promises`.
    ``RB_ID=832816``

  * util-app: `com.twitter.finagle.util.LoadService` has been moved to
    `c.t.app.LoadService` and can now be used without needing a finagle-core
    dependency. ``RB_ID=829897``

API Changes:

  * util-core: `c.t.u.Bijection` is removed. use `c.t.bijection.Bijection`
    (https://github.com/twitter/bijection) instead. ``RB_ID=834383``

  * Builds are now only for Java 8 and Scala 2.11. See the
    `blog post <https://finagle.github.io/blog/2016/04/20/scala-210-and-java7/>`_
    for details. ``RB_ID=828898``

   * util-core: Deprecated method `Future.get` has been removed because it made it
     too easy to hide blocking code. Replaced usage with the more explicit
     `com.twitter.util.Await.result(Future)`. ``RB_ID=833579``

6.34.0  2016-04-26

New Features:

  * util-core: Add `Throwables.unchecked` to help Java users deal with checked
    exceptions. ``RB_ID=811441``

  * util-stats: Can now get from a `com.twitter.finagle.stats.StatsReceiver`` to all "leaf"
    StatsReceivers that don't delegate to another StatsReceiver with
    `com.twitter.finagle.stats.DelegatingStatsReceiver.all`.  ``RB_ID=819519``

API Changes:

  * util-core: Removed deprecated methods from Buf.scala ``RB_ID=809948``
    - Removed `c.t.io.Buf.ByteArray.apply`, replace usage with `Buf.ByteArray.Owned.apply`.
    - Removed `c.t.io.Buf.ByteArray.unapply`, replace usage with `Buf.ByteArray.Owned.unapply`.
    - Removed `c.t.io.Buf.ByteBuffer.apply`, replace usage with `Buf.ByteBuffer.Owned.apply`.
    - Removed `c.t.io.Buf.toByteBuffer`, replace usage with `Buf.ByteBuffer.Owned.extract`.

  * util-core: Removed deprecated `Future.apply` methods ``RB_ID=811617``

  * util-stats: Removed `com.twitter.finagle.stats.BroadcastStatsReceiver` marker trait in favor of