@@ -1,6 +1,6 @@
-package com.twitter.cache.guava
+package com.twitter.cache.caffeine
 
-import com.google.common.cache.{CacheLoader, CacheBuilder}
+import com.github.benmanes.caffeine.cache.{Caffeine, CacheLoader}
 import com.twitter.cache.AbstractLoadingFutureCacheTest
 import com.twitter.util.Future
 import org.junit.runner.RunWith
@@ -9,15 +9,15 @@ import org.scalatest.junit.JUnitRunner
 @RunWith(classOf[JUnitRunner])
 class LoadingFutureCacheTest extends AbstractLoadingFutureCacheTest {
 
-  def name: String = "LoadingFutureCache (guava)"
+  def name: String = "LoadingFutureCache (caffeine)"
 
   // NB we can't reuse AbstractFutureCacheTest since
   // loading cache semantics are sufficiently unique
   // to merit distinct tests.
 
-  def mkCtx: Ctx = new Ctx {
+  def mkCtx: Ctx = new Ctx  {
     val cache = new LoadingFutureCache(
-      CacheBuilder
+      Caffeine
         .newBuilder()
         .build(
           new CacheLoader[String,Future[Int]] {
